# nginx_proxy_manager_tool

./: .gitignore  LICENSE  Makefile  README.md  galaxy.yml  nginx-proxy.json.example  npm_cli.py  pyproject.toml
docs/: ansible.md  ansible_usage.md  cli.md  cli_usage.md
meta/: runtime.yml
plugins/module_utils/: npm_api.py  npm_audit.py
plugins/modules/: npm_acl.py  npm_cert.py  npm_dead_host.py  npm_proxy.py  npm_redirect.py  npm_setting.py  npm_stream.py  npm_user.py
testing/: Makefile  docker-compose.yml
